--- a/contact.html
+++ b/contact.html
@@ -781,19 +781,19 @@
         <img
           class="collage__card collage__card--left"
           src="/images/contact/hero-card-left.avif"
-          alt=""
+          alt="CICL team member working on strategy"
           loading="lazy"
         />
         <img
           class="collage__card collage__card--center"
           src="/images/contact/hero-card-center.avif"
-          alt=""
+          alt="CICL consulting team collaboration"
           loading="lazy"
         />
         <img
           class="collage__card collage__card--right"
           src="/images/contact/hero-card-right.avif"
-          alt=""
+          alt="CICL professional training session"
           loading="lazy"
         />
       </div>
