--- a/service.html
+++ b/service.html
@@ -950,7 +950,7 @@
 
           <div data-aos="fade-up" data-aos="fade-down">
             <div class="organization-approach-images">
-              <img src="/images/home/professional-training.png" alt="" />
+              <img src="/images/home/professional-training.png" alt="Professional training programmes illustration" />
             </div>
             <h3>Professional training programmes</h3>
             <p>
