--- a/services/business-development-strategy.html
+++ b/services/business-development-strategy.html
@@ -13,10 +13,12 @@
     />
     <link
       rel="canonical"
-      href="https://ciconsult.com.ng/services/business-strategy"
+      href="https://www.ciconsult.com.ng/services/business-development-strategy.html"
     />
 
     <meta name="robots" content="index,follow" />
+    <meta name="author" content="Conceptual Integrated Consulting Limited" />
+    <meta name="keywords" content="business development, strategy consulting, market research, business model design, corporate strategy, branding, financial modeling, Nigeria" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
