--- a/services/professional-training-programme.html
+++ b/services/professional-training-programme.html
@@ -15,8 +15,12 @@
     />
     <link
       rel="canonical"
-      href="https://ciconsult.com.ng/services/training-programmes"
+      href="https://www.ciconsult.com.ng/services/professional-training-programme.html"
     />
+    
+    <meta name="robots" content="index,follow" />
+    <meta name="author" content="Conceptual Integrated Consulting Limited" />
+    <meta name="keywords" content="professional training, leadership development, HR training, finance training, technology training, HSE training, sales training, Nigeria" />
 
     <meta name="robots" content="index,follow" />
 
