--- a/services/talent-management-hr-solution.html
+++ b/services/talent-management-hr-solution.html
@@ -13,10 +13,12 @@
     />
     <link
       rel="canonical"
-      href="https://ciconsult.com.ng/services/talent-management-hr"
+      href="https://www.ciconsult.com.ng/services/talent-management-hr-solution.html"
     />
 
     <meta name="robots" content="index,follow" />
+    <meta name="author" content="Conceptual Integrated Consulting Limited" />
+    <meta name="keywords" content="talent management, HR solutions, recruitment, payroll outsourcing, background checks, HR policies, career services, Nigeria" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
