--- a/booking.html
+++ b/booking.html
@@ -9,6 +9,10 @@
       name="description"
       content="Book a strategy call or training discovery session with Conceptual Integrated Consulting Limited (CICL)."
     />
+    <meta name="robots" content="index,follow" />
+    <meta name="author" content="Conceptual Integrated Consulting Limited" />
+    <meta name="keywords" content="book consultation, strategy call, training discovery, HR consulting, business strategy, Nigeria" />
+    <link rel="canonical" href="https://www.ciconsult.com.ng/booking.html" />
     
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
