--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <!-- Primary Meta -->
   <meta name="description"
     content="CICL builds compliant, high-performance HR systems: recruitment, payroll outsourcing, background checks, market research, strategy & leadership training." />
+  <meta name="robots" content="index,follow" />
+  <meta name="author" content="Conceptual Integrated Consulting Limited" />
+  <meta name="keywords" content="HR consulting, talent management, business strategy, professional training, recruitment, payroll outsourcing, Nigeria, Lagos" />
   <link rel="canonical" href="https://www.ciconsult.com.ng/" />
 
   <!-- Open Graph -->
@@ -71,7 +74,7 @@
           {
             "@type": "ContactPoint",
             "contactType": "customer support",
-            "email": "hello@yourdomain.com",
+            "email": "info@ciconsult.com.ng",
             "telephone": "+2348030000000",
             "areaServed": "NG",
             "availableLanguage": ["en"]
@@ -111,8 +114,11 @@
 </head>
 
 <body>
+  <!-- Skip to main content link for accessibility -->
+  <a href="#main-content" class="skip-link">Skip to main content</a>
+  
   <!-- Scroll-to-top button -->
-  <button type="button" id="backToTop" title="Go to top">↑</button>
+  <button type="button" id="backToTop" title="Go to top" aria-label="Scroll to top">↑</button>
 
   <header>
     <img src="/images/CICL.jpg" alt="CICL brand logo" class="logo" />
@@ -611,7 +617,7 @@
       </nav>
   </header>
 
-  <main class="hero container homepage-hero">
+  <main id="main-content" class="hero container homepage-hero">
     <h1 data-aos="fade-up" data-aos="fade-down">
       Transform teams. <br />
       Deliver measurable results.
