--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
         "@id": "https://ciconsult.com.ng/#organization",
         "name": "Conceptual Integrated Consulting Limited",
         "alternateName": "CICL",
-        "url": "https://ciconsult.com.ng/",
+        "url": "https://www.ciconsult.com.ng/",
         "logo": "https://ciconsult.com.ng/images/footer-logo.png",
         "email": "hello@ciconsult.com.ng",
         "telephone": "+234-XXX-XXX-XXXX",
@@ -103,7 +103,7 @@
         "@context": "https://schema.org",
         "@type": "ContactPage",
         "name": "Contact CICL",
-        "url": "https://ciconsult.com.ng/contact",
+        "url": "https://www.ciconsult.com.ng/contact.html",
         "description": "Contact CICL for consulting, HR, and training enquiries. We respond within one business day (Africa/Lagos).",
         "inLanguage": "en",
         "isPartOf": { "@id": "https://ciconsult.com.ng/#organization" },
