--- a/business-development/corporate-branding.html
+++ b/business-development/corporate-branding.html
@@ -16,10 +16,12 @@
     />
     <link
       rel="canonical"
-      href="https://ciconsult.com.ng/services/corporate-branding"
+      href="https://www.ciconsult.com.ng/business-development/corporate-branding.html"
     />
 
     <meta name="robots" content="index,follow" />
+    <meta name="author" content="Conceptual Integrated Consulting Limited" />
+    <meta name="keywords" content="corporate branding, brand strategy, brand identity, visual identity, brand positioning, Nigeria" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -109,9 +111,9 @@
         "provider": {
           "@type": "Organization",
           "name": "Conceptual Integrated Consulting Limited",
-          "url": "https://ciconsult.com.ng"
+          "url": "https://www.ciconsult.com.ng"
         },
-        "url": "https://ciconsult.com.ng/services/corporate-branding",
+        "url": "https://www.ciconsult.com.ng/business-development/corporate-branding.html",
         "areaServed": {
           "@type": "Place",
           "name": "Global"
