--- a/business-development/market-research-business-analysis.html
+++ b/business-development/market-research-business-analysis.html
@@ -16,10 +16,12 @@
     />
     <link
       rel="canonical"
-      href="https://ciconsult.com.ng/services/market-research-business-analysis"
+      href="https://www.ciconsult.com.ng/business-development/market-research-business-analysis.html"
     />
 
     <meta name="robots" content="index,follow" />
+    <meta name="author" content="Conceptual Integrated Consulting Limited" />
+    <meta name="keywords" content="market research, business analysis, competitive intelligence, market sizing, customer insights, strategic planning, Nigeria" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -109,9 +111,9 @@
         "provider": {
           "@type": "Organization",
           "name": "Conceptual Integrated Consulting Limited",
-          "url": "https://ciconsult.com.ng"
+          "url": "https://www.ciconsult.com.ng"
         },
-        "url": "https://ciconsult.com.ng/services/market-research-business-analysis",
+          "url": "https://www.ciconsult.com.ng/business-development/market-research-business-analysis.html",
         "areaServed": {
           "@type": "Place",
           "name": "Global"
