--- a/professional-training/hr-people-maagement-training.html
+++ b/professional-training/hr-people-maagement-training.html
@@ -16,10 +16,12 @@
     />
     <link
       rel="canonical"
-      href="https://ciconsult.com.ng/services/hr-people-management-training"
+      href="https://www.ciconsult.com.ng/professional-training/hr-people-maagement-training.html"
     />
 
     <meta name="robots" content="index,follow" />
+    <meta name="author" content="Conceptual Integrated Consulting Limited" />
+    <meta name="keywords" content="HR training, people management training, human resources development, HR skills, Nigeria" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -109,9 +111,9 @@
         "provider": {
           "@type": "Organization",
           "name": "Conceptual Integrated Consulting Limited",
-          "url": "https://ciconsult.com.ng"
+          "url": "https://www.ciconsult.com.ng"
         },
-        "url": "https://ciconsult.com.ng/services/hr-people-management-training",
+        "url": "https://www.ciconsult.com.ng/professional-training/hr-people-maagement-training.html",
         "areaServed": {
           "@type": "Place",
           "name": "Global"
