--- a/professional-training/leadership-management.html
+++ b/professional-training/leadership-management.html
@@ -16,10 +16,12 @@
     />
     <link
       rel="canonical"
-      href="https://ciconsult.com.ng/services/leadership-management"
+      href="https://www.ciconsult.com.ng/professional-training/leadership-management.html"
     />
 
     <meta name="robots" content="index,follow" />
+    <meta name="author" content="Conceptual Integrated Consulting Limited" />
+    <meta name="keywords" content="leadership training, management development, executive coaching, leadership programs, Nigeria" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -109,9 +111,9 @@
         "provider": {
           "@type": "Organization",
           "name": "Conceptual Integrated Consulting Limited",
-          "url": "https://ciconsult.com.ng"
+          "url": "https://www.ciconsult.com.ng"
         },
-        "url": "https://ciconsult.com.ng/services/leadership-management",
+        "url": "https://www.ciconsult.com.ng/professional-training/leadership-management.html",
         "areaServed": {
           "@type": "Place",
           "name": "Global"
