--- a/talent-management-hr-solution/career-service.html
+++ b/talent-management-hr-solution/career-service.html
@@ -16,9 +16,14 @@
     />
     <meta name="robots" content="index,follow" />
 
-    <!-- Canonical (update to your real URL) -->
     <link
       rel="canonical"
+      href="https://www.ciconsult.com.ng/talent-management-hr-solution/career-service.html"
+    />
+
+    <meta name="robots" content="index,follow" />
+    <meta name="author" content="Conceptual Integrated Consulting Limited" />
+    <meta name="keywords" content="career services, CV writing, LinkedIn optimization, career coaching, job search, Nigeria" />
       href="https://ciconsult.com.ng/services/career-services"
     />
 
@@ -110,9 +115,9 @@
         "provider": {
           "@type": "Organization",
           "name": "Conceptual Integrated Consulting Limited",
-          "url": "https://www.example.com"
+          "url": "https://www.ciconsult.com.ng"
         },
-        "url": "https://ciconsult.com.ng/services/career-services",
+        "url": "https://www.ciconsult.com.ng/talent-management-hr-solution/career-service.html",
         "areaServed": {
           "@type": "Place",
           "name": "Global"
