--- a/talent-management-hr-solution/hr-policies-employee-handbook.html
+++ b/talent-management-hr-solution/hr-policies-employee-handbook.html
@@ -16,10 +16,12 @@
     />
     <link
       rel="canonical"
-      href="https://ciconsult.com.ng/services/hr-policies-employee-handbook"
+      href="https://www.ciconsult.com.ng/talent-management-hr-solution/hr-policies-employee-handbook.html"
     />
 
     <meta name="robots" content="index,follow" />
+    <meta name="author" content="Conceptual Integrated Consulting Limited" />
+    <meta name="keywords" content="HR policies, employee handbook, HR compliance, workplace policies, Nigeria" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -109,9 +111,9 @@
         "provider": {
           "@type": "Organization",
           "name": "Conceptual Integrated Consulting Limited",
-          "url": "https://ciconsult.com.ng"
+          "url": "https://www.ciconsult.com.ng"
         },
-        "url": "https://ciconsult.com.ng/services/hr-policies-employee-handbook",
+        "url": "https://www.ciconsult.com.ng/talent-management-hr-solution/hr-policies-employee-handbook.html",
         "areaServed": {
           "@type": "Place",
           "name": "Global"
