--- a/talent-management-hr-solution/recruitment-selection.html
+++ b/talent-management-hr-solution/recruitment-selection.html
@@ -16,10 +16,12 @@
     />
     <link
       rel="canonical"
-      href="https://ciconsult.com.ng/services/recruitment-selection"
+      href="https://www.ciconsult.com.ng/talent-management-hr-solution/recruitment-selection.html"
     />
 
     <meta name="robots" content="index,follow" />
+    <meta name="author" content="Conceptual Integrated Consulting Limited" />
+    <meta name="keywords" content="recruitment, talent acquisition, hiring, selection process, Nigeria" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -109,9 +111,9 @@
         "provider": {
           "@type": "Organization",
           "name": "Conceptual Integrated Consulting Limited",
-          "url": "https://ciconsult.com.ng"
+          "url": "https://www.ciconsult.com.ng"
         },
-        "url": "https://ciconsult.com.ng/services/recruitment-selection",
+        "url": "https://www.ciconsult.com.ng/talent-management-hr-solution/recruitment-selection.html",
         "areaServed": {
           "@type": "Place",
           "name": "Global"
