updated navigation between pages

--- a/booking.html
+++ b/booking.html
@@ -1269,7 +1269,7 @@
 
       <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
         <a href="/contact.html" class="btn-solid">Contact our team</a>
-        <a href="proposal.html" class="btn-ghost">Request a proposal</a>
+        <a href="/proposal.html" class="btn-ghost">Request a proposal</a>
       </div>
     </section>
 
