--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
     </p>
     <div data-aos="fade-up" data-aos="fade-down" class="hero-links">
       <a href="/booking.html" class="btn-solid" data-analytics="cta_book_strategy_call">Book Strategy Call</a>
-      <a href="proposal.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
+      <a href="/proposal.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
     </div>
 
     <div data-aos="fade-up" data-aos="fade-down" class="collage">
@@ -898,7 +898,7 @@
             </div>
             <div data-aos="fade-up" data-aos="fade-down" class="actions">
               <a href="/booking.html" class="btn-solid" data-analytics="cta_book_strategy_call">Book Strategy Call</a>
-              <a href="proposal.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
+              <a href="/proposal.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
             </div>
           </div>
         </div>
@@ -1028,7 +1028,7 @@
             TAM/SAM/SOM sizing, customer insights, competitor mapping, and
             pricing tests to de-risk decisions.
           </p>
-          <a href="/services/business-strategy#research" class="card-link">View Service <i
+          <a href="/services/business-development-strategy.html#research" class="card-link">View Service <i
               class="fas fa-chevron-right"></i></a>
         </div>
       </div>
@@ -1049,7 +1049,7 @@
             Operating models, org structure, governance, SOPs, and unit
             economics—built for scale.
           </p>
-          <a href="/services/business-strategy#models" class="card-link">View Service <i
+          <a href="/services/business-development-strategy.html#models" class="card-link">View Service <i
               class="fas fa-chevron-right"></i></a>
         </div>
       </div>
@@ -1071,7 +1071,7 @@
             Strategy sprints, OKRs, roadmaps, PMO setup, and performance
             dashboards for measurable outcomes.
           </p>
-          <a href="/services/business-strategy#execution" class="card-link">View Service <i
+          <a href="/services/business-development-strategy.html#execution" class="card-link">View Service <i
               class="fas fa-chevron-right"></i></a>
         </div>
       </div>
@@ -1442,7 +1442,7 @@
 
     <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
       <a href="/booking.html" class="btn-solid" data-analytics="cta_book_strategy_call">Book Strategy Call</a>
-      <a href="proposal.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
+      <a href="/proposal.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
     </div>
   </section>
 
