--- a/proposal.html
+++ b/proposal.html
@@ -11,7 +11,7 @@
       name="description"
       content="Request a tailored consulting proposal from CICL for Talent Management & HR, Business Development & Strategy, or Professional Training Programmes."
     />
-    <link rel="canonical" href="https://ciconsult.com.ng/proposal.html" />
+    <link rel="canonical" href="https://www.ciconsult.com.ng/proposal.html" />
 
     <meta name="robots" content="index,follow" />
 
@@ -218,7 +218,7 @@
                 <ul role="list" class="mega-col">
                   <li role="listitem" class="mega-col-list">
                     Business Development &amp; Strategy
-                    <a href="/services/business-strategy"
+                    <a href="/services/business-development-strategy.html"
                       ><i class="fa-solid fa-link" aria-hidden="true"></i>
                       Explore</a
                     >
@@ -467,7 +467,7 @@
           >Book Strategy Call</a
         >
         <a
-          href="proposal.html"
+          href="/proposal.html"
           class="btn-ghost"
           data-analytics="cta_request_proposal"
           aria-current="page"
