--- a/service.html
+++ b/service.html
@@ -960,7 +960,7 @@
           </div>
         </div>
 
-        <a data-aos="fade-up" data-aos="fade-down" href="" class="btn-solid">Explore Services</a>
+        <a data-aos="fade-up" data-aos="fade-down" href="/service.html" class="btn-solid">Explore Services</a>
       </div>
     </section> -->
 
