updated the contact info

--- a/about.html
+++ b/about.html
@@ -130,10 +130,11 @@
         "alternateName": "CICL",
         "url": "https://www.ciconsult.com.ng/",
         "logo": "https://www.ciconsult.com.ng/images/favicon/android-chrome-192x192.png",
-        "telephone": "+234-803-000-0000",
+        "telephone": "+234 0802 857 7534",
         "email": "hello@ciconsult.com.ng",
         "address": {
           "@type": "PostalAddress",
+          "streetAddress": "70B Olorunlogbon St, Anthony Village",
           "addressLocality": "Lagos",
           "addressCountry": "NG"
         },
@@ -149,7 +150,7 @@
             "@type": "ContactPoint",
             "contactType": "customer support",
             "email": "hello@ciconsult.com.ng",
-            "telephone": "+234-803-000-0000",
+            "telephone": "+234 0802 857 7534",
             "areaServed": "NG",
             "availableLanguage": ["en"]
           }
@@ -1577,7 +1578,7 @@
               SMEs <span>•</span> Growth-stage <span>•</span> Enterprise
               <span>•</span> Public Sector
             </p>
-            <address>No. 2 Agege Motor Road, Lagos, NG.</address>
+            <address>70B Olorunlogbon St, Anthony Village, Lagos, NG.</address>
           </div>
 
           <div class="footer-column footer-links">
