--- a/contact.html
+++ b/contact.html
@@ -61,9 +61,10 @@
         "url": "https://www.ciconsult.com.ng/",
         "logo": "https://ciconsult.com.ng/images/footer-logo.png",
         "email": "hello@ciconsult.com.ng",
-        "telephone": "+234-XXX-XXX-XXXX",
+        "telephone": "+234 0802 857 7534",
         "address": {
           "@type": "PostalAddress",
+          "streetAddress": "70B Olorunlogbon St, Anthony Village",
           "addressLocality": "Lagos",
           "addressCountry": "NG"
         },
@@ -72,7 +73,7 @@
             "@type": "ContactPoint",
             "contactType": "customer support",
             "email": "hello@ciconsult.com.ng",
-            "telephone": "+234-XXX-XXX-XXXX",
+            "telephone": "+234 0802 857 7534",
             "areaServed": "NG"
           },
           {
@@ -842,7 +843,7 @@
           </div>
           <h3 class="qc-title">Professional<br />development inquiries</h3>
           <p class="qc-copy">Responsive support across multiple channels</p>
-          <a href="tel:+234000000000" class="qc-link">+234 XXX XXX XXXX</a>
+          <a href="tel:+23408028577534" class="qc-link">+234 0802 857 7534</a>
         </li>
 
         <!-- Office / Map -->
@@ -884,7 +885,7 @@
           </li>
           <li>
             <i class="fa-solid fa-phone" aria-hidden="true"></i>
-            <a href="tel:+234000000000">+234&nbsp;XXX&nbsp;XXX&nbsp;XXXX</a>
+            <a href="tel:+23408028577534">+234&nbsp;0802&nbsp;857&nbsp;7534</a>
           </li>
           <li>
             <i class="fa-solid fa-location-dot" aria-hidden="true"></i> Lagos,
@@ -1096,7 +1097,7 @@
               SMEs <span>•</span> Growth-stage <span>•</span> Enterprise
               <span>•</span> Public Sector
             </p>
-            <p>No. 2 Agege Motor Road, Lagos, NG.</p>
+            <p>70B Olorunlogbon St, Anthony Village, Lagos, NG.</p>
           </div>
 
           <div class="footer-column footer-links">
