--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             "@type": "ContactPoint",
             "contactType": "customer support",
             "email": "info@ciconsult.com.ng",
-            "telephone": "+2348030000000",
+            "telephone": "+234 0802 857 7534",
             "areaServed": "NG",
             "availableLanguage": ["en"]
           }
@@ -1461,7 +1461,7 @@
             SMEs <span>•</span> Growth-stage <span>•</span> Enterprise
             <span>•</span> Public Sector
           </p>
-          <p>No. 2 Agege Motor Road, Lagos, NG.</p>
+          <p>70B Olorunlogbon St, Anthony Village, Lagos, NG.</p>
         </div>
 
         <div class="footer-column footer-links">
