--- a/terms-condition.html
+++ b/terms-condition.html
@@ -1063,7 +1063,7 @@
           <strong>Conceptual Integrated Consulting Limited (CICL)</strong><br />
           Email:
           <a href="mailto:info@ciconsult.com.ng">info@ciconsult.com.ng</a><br />
-          Phone: <span>+234 (0) XXX XXX XXXX</span><br />
+          Phone: <span>+234 0802 857 7534</span><br />
           Address: <span>[Insert registered office address here]</span>
         </p>
       </section>
@@ -1088,7 +1088,7 @@
               SMEs <span>•</span> Growth-stage <span>•</span> Enterprise
               <span>•</span> Public Sector
             </p>
-            <p>No. 2 Agege Motor Road, Lagos, NG.</p>
+            <p>70B Olorunlogbon St, Anthony Village, Lagos, NG.</p>
           </div>
 
           <div class="footer-column footer-links">
