--- a/booking.html
+++ b/booking.html
@@ -1239,7 +1239,7 @@
             <p class="support-contact">
               Email:
               <a href="mailto:info@ciconsult.com.ng">info@ciconsult.com.ng</a><br />
-              Phone: <span>+234 (0) XXX XXX XXXX</span>
+              Phone: <span>+234 0802 857 7534</span>
             </p>
           </div>
 
@@ -1288,7 +1288,7 @@
             SMEs <span>•</span> Growth-stage <span>•</span> Enterprise
             <span>•</span> Public Sector
           </p>
-          <p>No. 2 Agege Motor Road, Lagos, NG.</p>
+          <p>70B Olorunlogbon St, Anthony Village, Lagos, NG.</p>
         </div>
 
         <div class="footer-column footer-links">
